--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+    <h1>Heading</h1>
+    <p>Fat new smallness few supposing suspicion two. Course sir people worthy horses add entire suffer. How one dull get busy dare far. At principle perfectly by sweetness do. As mr started arrival subject by believe. Strictly numerous outlived kindness whatever on we no on addition. </p>
     </main>
 
   </body>
