--- a/public/index.html
+++ b/public/index.html
@@ -3,63 +3,39 @@
   <head>
     <!--Meta Information -->
     <title>Tweeter - Home Page</title>
-
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-
-        <!-- Fonts -->
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
-
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script src="https://use.fontawesome.com/b8994bec03.js"></script>
-
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
-
   <body>
-
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
-
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section id="new" class="new-tweet group">
         <form class="tweet" action="tweets/" method="post">
           <h2>Compose Tweet</h2>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
+          <button id="submit" type="submit" value="Tweet"></button>
           <span class="counter">140</span>
         </form>
       </section>
-      <div class="tweets new-tweet">
-          <article class="tweet">
-            <header class="group">
-                <img src="/images/avatar.png"></img>
-                <h2>Name</h2>
-                <span id="tag">@name</span>
-              </ul>
-            </header>
-              <p>Some stupid tweet.</p>
-            <footer class="">
-              <p>date</p>
+      <div class="tweet-content">
 
-                <a href="#" class="fa fa-flag"></a>
-                <a href="#" class="fa fa-retweet"></a>
-                <a href="#" class="fa fa-heart"></a>
-
-            </footer>
-          </article>
       </div>
     </main>
   </body>
