--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="addTweet" class="fa fa-edit">Compose</button>
     </nav>
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -30,7 +31,7 @@
         <form class="tweet" action="tweets/" method="post">
           <h2>Compose Tweet</h2>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <button id="submit" type="submit" value="Tweet"></button>
+          <button id="submit" type="submit" value="Tweet">Tweet</button>
           <span class="counter">140</span>
         </form>
       </section>
