--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/stylesheet.css" type="text/css" />
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script src="https://use.fontawesome.com/b8994bec03.js"></script>
@@ -27,7 +25,7 @@
     </nav>
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <section id="new" class="new-tweet group">
+      <section id="new" class="new-tweet">
         <form class="tweet" action="tweets/" method="post">
           <h2>Compose Tweet</h2>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
